content/docs/0.12.x/reference/cli/commands/keptn_version.md
---
date: "2022-02-03T11:21:04Z"
title: "keptn version"
slug: keptn_version
---
## keptn version

Shows the version of Keptn and Keptn CLI

### Synopsis

Shows the version of Keptn and Keptn CLI, and a note when a new version is available.

```
keptn version [flags]
```

### Examples

```
keptn version
```

### Options inherited from parent commands

```
      --config-file string   Specify custom Keptn Config file path (default: ~/.keptn/config)
  -h, --help                 help
      --mock                 Disables communication to a Keptn endpoint
  -n, --namespace string     Specify the namespace where Keptn should be installed, used and uninstalled in (default "keptn")
  -q, --quiet                Suppresses debug and info messages
  -v, --verbose              Enables verbose logging to print debug messages
  -y, --yes                  Assume yes for all user prompts
```

### SEE ALSO

* [keptn](../keptn/)	 - The CLI for using Keptn

###### Auto generated by spf13/cobra on 3-Feb-2022
